fix(call): overflow for long user name in incoming call

--- a/components/views/media/incomingCall/IncomingCall.less
+++ b/components/views/media/incomingCall/IncomingCall.less
@@ -42,6 +42,9 @@
     font-size: 25px;
     font-family: @primary-font;
     margin-bottom: 0;
+    text-overflow: ellipsis;
+    width: 100%;
+    overflow: hidden;
   }
   .user-status {
     opacity: 0.5;
